--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@
 PORT=3000
 
 # Base de données
-MONGO_URI=
+MONGO_URI=mongodb://localhost:27017/garage-agency
 
 # Clé secrète pour JWT (si tu utilises des tokens pour l'authentification)
 JWT_SECRET=supersecretkey
