--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,18 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0"
+  },
+  "_moduleAliases": {
+    "@middlewares": "./src/middlewares",
+    "@controllers": "./src/controllers",
+    "@models": "./src/models",
+    "@routes": "./src/routes",
+    "@services": "./src/services",
+    "@errors": "./src/errors",
+    "@utils": "./src/utils",
+    "@config": "./src/config"
   }
 }
