--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "angular-tabler-icons": "^2.7.0",
     "apexcharts": "^3.40.0",
     "iconify": "^1.4.0",
+    "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.7.6",
     "ngx-scrollbar": "^11.0.0",
     "rxjs": "~7.5.0",
