--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "module-alias": "^2.2.3",
     "mongoose": "^8.12.1",
     "mongoose-paginate-v2": "^1.9.0",
+    "mongoose-sequence": "^6.0.1",
     "morgan": "^1.10.0"
   },
   "_moduleAliases": {
